windows scrollbar fixes;

--- a/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_global.scss
@@ -146,13 +146,19 @@ body.front {
   &.windows {
     overflow-x: hidden;
 
+
     .fullscreen {
       overflow: hidden;
-      
+
       &:fullscreen {
         overflow-y: scroll;
       }
     }
 
+    &.centered-image{
+      .fullscreen{
+        overflow-y: hidden;
+      }
+    }
   }
 }
